--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffe house</title>
-    <link href="./output.css" rel="stylesheet" />
+    <link href="./output.css" type="text/css" rel="stylesheet" />
 
 </head>
 
 <body>
     <div id="root">
-        <div class="content-wrapper">
-            <header>
-                Header
+        <div class="content-wrapper max-w-screen-2xl text-base mx-auto px-8 bg-slate-200">
+            <header class="py-6 mx-10">
+                <nav class="flex justify-between flex-row items-center">
+                    <div class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer">
+                        CoffeeStyle.
+                    </div>
+                    <ul
+                        class="basis-3/6 flex items-center justify-end gap-8 uppercase text-sm text-gray-500 font-medium">
+                        <li class="ct-top-menu-item">
+                            <a class="#" href="">Home</a>
+                        </li>
+                        <li class="ct-top-menu-item">
+                            <a class="#" href="">Products</a>
+                        </li>
+                        <li class="ct-top-menu-item">
+                            <a class="#" href="">Blog</a>
+                        </li>
+                        <li class="ct-top-menu-item">
+                            <a class="#" href="">About</a>
+                        </li>
+                        <li class="ct-top-menu-item">
+                            <a class="#" href="">Contact</a>
+                        </li>
+                        <li class="ct-top-menu-item">
+                            <a class="#" href="">StyleGuide</a>
+                        </li>
+                    </ul>
+                    <ul
+                        class="basis-1/6 flex justify-start items-center ml-16 uppercase text-sm text-gray-500 font-medium">
+                        <li class="ct-top-menu-item">
+                            <a href="#" class="flex items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="ct-icon">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                </svg>
+                                <span class="mx-2">Cart</span>
+                                <span class="ct-badge-circle bg-orange-400 text-white">7</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </header>
             <main>
                 <div class="slider">
